# G4CMP

./: .clang-format  .gitattributes  .gitignore  1  CMakeLists.txt  CONTRIBUTING.md  ChangeHistory  Doxyfile  FindGeant4.cmake  G4CMPOrdParamTable.txt  GNUmakefile  Geant4_LICENSE.html  README  README.md  g4cmp.gmk  g4cmp_env.csh  g4cmp_env.sh
G4CMP_utils/Epot/: CMakeLists.txt  PASTEME  README  test.cc
channeling/: 2009_PLB680_129.mac  2010_NIMB268_2655  2013_ESTB_AM.mac  2013_ESTB_CH.mac  2013_ESTB_VR.mac  2013_PLB719_70.mac  CMakeLists.txt  CMakeLists.txt.back  GNUmakefile  ch2mev.mac  ch2mev_p.mac  ch400gev.mac  ch400gev_p.mac  channeling.cc  channelling.cc  g4cmpChannel.cc  noch2mev.mac  noch2mev_p.mac  vis.mac
channeling/include/: A01DriftChamberHit.hh  A01EventAction.hh  ChannelingContinuousDiscreteWrapper.hh  ChannelingDetectorConstruction.hh  ChannelingDetectorMessenger.hh  ChannelingDiscreteWrapper.hh  ChannelingDriftChamber.hh  ChannelingDriftHit.hh  ChannelingEventAction.hh  ChannelingEventMessenger.hh  ChannelingParticleUserInfo.hh  ChannelingPhysicsList.hh  ChannelingPhysicsMessenger.hh  ChannelingPrimaryGeneratorAction.hh  ChannelingPrimaryGeneratorMessenger.hh  ChannelingStackingAction.hh  ChannelingStackingMessenger.hh  ChannelingStepLimiter.hh  ChannelingStepMessenger.hh  ChannelingTrackingAction.hh  DetectorConstruction.hh  DetectorConstructionMessenger.hh  G4CMPChanneling.hh  G4CMPChannelingSlow.hh  G4LindhardPartition.hh  PhysicsList.hh  PhysicsListMessenger.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorActionMessenger.hh  ProcessChanneling.hh  ProcessChannelingSlow.hh  StackingAction.hh  TrackingAction.hh  XCrystalCharacteristicArray.hh  XCrystalIntegratedDensity.hh  XCrystalIntegratedDensityHub.hh  XCrystalIntegratedDensityPlanar.hh  XCrystalPlanarMoliereElectricField.hh  XCrystalPlanarMoliereElectronDensity.hh  XCrystalPlanarMolierePotential.hh  (+18 more)
channeling/mac/: 2009_PLB680_129.mac  2010_NIMB268_2655.mac  2010_NIMB268_2655_AM.mac  2010_NIMB268_2655_NOCRY.mac  2010_NIMB268_2655_VR.mac  2013_PLB719_70.mac  2014_CAL_CH.mac  2014_ESTB_AM.mac  2014_ESTB_CH.mac  2014_ESTB_VR.mac  2014_LNL_CH.mac  toymodel.mac
channeling/src/: A01DriftChamber.cc  A01DriftChamberHit.cc  A01EventAction.cc  ChannelingContinuousDiscreteWrapper.cc  ChannelingDetectorConstruction.cc  ChannelingDetectorMessenger.cc  ChannelingDiscreteWrapper.cc  ChannelingDriftChamber.cc  ChannelingDriftHit.cc  ChannelingEventAction.cc  ChannelingEventMessenger.cc  ChannelingParticleUserInfo.cc  ChannelingPhysicsList.cc  ChannelingPhysicsMessenger.cc  ChannelingPrimaryGeneratorAction.cc  ChannelingPrimaryGeneratorMessenger.cc  ChannelingStackingAction.cc  ChannelingStackingMessenger.cc  ChannelingStepLimiter.cc  ChannelingStepMessenger.cc  ChannelingTrackingAction.cc  DetectorConstruction.cc  DetectorConstructionMessenger.cc  G4CMPChanneling.cc  G4CMPChannelingSlow.cc  PhysListEmStandardSS.cc  PhysicsList.cc  PhysicsListMessenger.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorActionMessenger.cc  ProcessChanneling.cc  ProcessChannelingSlow.cc  StackingAction.cc  StackingMessenger.cc  StepMax.cc  TrackingAction.cc  XCrystalCharacteristicArray.cc  XCrystalIntegratedDensity.cc  XCrystalIntegratedDensityHub.cc  XCrystalIntegratedDensityPlanar.cc  (+19 more)
charge/: CMakeLists.txt  ChargeTimeStep.kdev4  ChargeTimeStep_ziped.kdev4  ConstantsFET.txt  ConstantsPhonon.txt  GNUmakefile  GeBox.cc  RamoChannels.txt  caustic.ssv  drift_curve.mac  electron_Epv.cc  electrons  epositions.txt.good  fast.mac  g4cmpCharge.cc  g4cmpFETSim.cc  gmon.out  hole-data  iZip4.mac  ionize.cc  latticeVecs.cc  loop.mac  luke_dist.cc  open.mac  run.mac  saveRndm.mac  shortQOS1.mac  simpleE.txt  single.mac  testRefl.mac  useRndm.mac  vdrift.awk  vis.mac
charge/CrystalMaps/: FTGroupV.tsv  GroupV.tsv  LTable.tsv  LVTable.tsv  STVTable.tsv
charge/include/: .AlminumElectrodeSensitivity.hh.swp  AlminumElectrodeSensitivity.hh  CDMS_iZip4_Field.hh  ChargeActionInitialization.hh  ChargeDetectorConstruction.hh  ChargeEMField.hh  ChargeElectrodeSensitivity.hh  ChargeFETDigitizerMessenger.hh  ChargeFETDigitizerModule.hh  ChargeFieldMessenger.hh  ChargePrimaryGeneratorAction.hh  DMCClassicalRK4.hh  DriftingElectronStackingAction.hh  EFieldProcess.hh  ElectronLukeScatteringProcess.hh  ElectronLukeScatteringProcess1.hh  EqEMFieldXtal.hh  FET.hh  FETMessenger.hh  FastTransversePhononScatteringProcess.hh  InterValleyScatteringProcess.hh  Interpolation3D.hh  LPhonon.hh  LatticeManager2.hh  LukeScatteringProcess.hh  MatWriter.hh  ObliqueEFieldProcess.hh  Phonon.hh  PhononScatteringProcess.hh  PhononStackingAction.hh  PhononTrackInformation.hh  QPDownconversion.hh  TPhononFast.hh  TimeStepper.hh  TransversePhononScatteringProcess.hh  TriLinearInterp.hh  Triangulation3D.hh  Tst1DetectorConstruction.hh  Tst1EMField.hh  Tst1PrimaryGeneratorAction.hh  (+2 more)
charge/src/: .EqEMFieldXtal.cc.swp  .Tst1PrimaryGeneratorAction.cc.swp  AlminumElectrodeSensitivity.cc  CDMS_iZip4_Field.cc  ChargeActionInitialization.cc  ChargeDetectorConstruction.cc  ChargeEMField.cc  ChargeElectrodeSensitivity.cc  ChargeFETDigitizerMessenger.cc  ChargeFETDigitizerModule.cc  ChargeFieldMessenger.cc  ChargePrimaryGeneratorAction.cc  DMCClassicalRK4.cc  DMCClassicalRK4.cc.back  DMCClassicalRK4.cc.back3  DriftingCarrierBoundaryProcess.cc  DriftingElectron.cc  EqEMFieldXtal.cc  (+26 more)
phonon/: CMakeLists.txt  GNUmakefile  Makefile  g4cmpPhonon.cc  scorer.mac  vis.mac
tests/: CMakeLists.txt  GNUmakefile  electron_Epv.cc  g4cmpEFieldTest.cc  latticeVecs.cc  luke_dist.cc  phononKinematics.cc  plot_test_phonon_kinematics.py  testBlockData.cc  testChargeCloud.cc  testConfigs.mac  testCrystalGroup.cc  testFanoFactor.cc  testG4CMPMatrix.cc  testHVtransform.cc  testNRyield.cc  testPartition.cc  testSecondaryProd.cc  testSolidUtils.cc  testTemperature.cc  testTransforms.cc
tools/: CMakeLists.txt  GNUmakefile  Makefile  cmake_install.cmake  g4cmpKVtables.cc  generate_luke_lookup_tables.py  luke_emission_functions.py  plot_phonon_kinematics.py
validation/: CMakeLists.txt  GNUmakefile  g4cmpValidation.cc
(+574 files in other folders)
